--- a/public/index.css
+++ b/public/index.css
@@ -61,3 +61,60 @@ body {
       width: 33.3%;
   }
 }
+
+.loading {
+  margin: 16px 0px 10px 0px;
+}
+
+.loading {
+  text-align: center;
+}
+
+.loading .block {
+  height: 30px;
+  display: inline-block;
+  background-color: #ccc;
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+}
+
+.loading .block:nth-child(1) {
+  animation: loading-spin 1.2s ease-out infinite 0s;
+}
+
+.loading .block:nth-child(2) {
+  animation: loading-spin 1.2s ease-out infinite 0.4s;
+}
+
+.loading .block:nth-child(3) {
+  animation: loading-spin 1.2s ease-out infinite 0.8s;
+}
+
+@keyframes loading-spin {
+  0% {
+      opacity: .2;
+      -webkit-transform: scale(1);
+      transform: scale(1);
+  }
+  33% {
+      opacity: 1;
+      -webkit-transform: scale(1.35);
+      transform: scale(1.35);
+  }
+  66% {
+      opacity: .2;
+      -webkit-transform: scale(1);
+      transform: scale(1);
+  }
+  99% {
+      opacity: .2;
+      -webkit-transform: scale(1);
+      transform: scale(1);
+  }
+  100% {
+      opacity: .2;
+      -webkit-transform: scale(1);
+      transform: scale(1);
+  }
+}
