--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,18 @@
 * { box-sizing: border-box; }
+body {
+  background-color: #eee;
+  margin: 0;
+}
 
+.wrap-logo{
+  width: 100%;
+  background-color: white;
+  padding: 10px 6px;
+}
+.logo {
+  width: 50%;
+  margin-left: 6px;
+}
 /* force scrollbar */
 html { overflow-y: scroll; }
 
@@ -7,7 +20,6 @@ body {
   font-family: sans-serif; 
   padding: 0;
   margin: 0;
-  padding: 0px 6px;
 }
 
 /* ---- grid ---- */
